Continued a bit.. added some style!

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,103 @@
+:root {
+    --main-titles: #F8ECC2;
+    
+}
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    background-image: url(images/mythic\ sfondo2.webp);
+    background-size: cover;
+    background-position: center center;
+}
+
+a {
+    text-decoration: none;
+    font-family: "Merriweather", serif;
+    font-weight: bold;
+}
+
+/*HEADER*/
+
+#nav-bar {
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    padding-right: 40px;
+
+    position: sticky;
+}
+
+#header-img {
+    width: 150px; 
+}
+
+#nav-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    list-style: none;
+}
+
+/*NEWSLETTER*/
+
+#newsletter {
+    text-align: center;
+    padding: 20px;
+    font-family: "Merriweather", serif;
+    color: lightgray;
+    
+}
+
+#form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+}
+
+#email {
+    padding: 5px 10px 5px 10px;
+}
+
+#submit {
+    padding: 0 10px 0 10px;
+ 
+}
+
+#main-div {
+    display: flex;
+    flex-direction: column;
+    margin: 0 25vw 0 25vw;
+    gap: 10px;
+    font-family: "Roboto", sans-serif;
+}
+
+#grid {
+    display: flex;
+    gap: 40px;
+}
+
+#icon-div {
+    align-self: center;
+    font-size: xx-large;
+    color: orangered;
+    padding-top: 5px;
+
+}
+#desc-div {
+    display: flex;
+    flex-direction: column;
+    font-size: small;
+    gap: 5px;
+}
+
+#desc-div > h2 {
+    font-weight: bold;
 }
