--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,26 @@
 :root {
     --main-titles: #F8ECC2;
-    
+    --body-text:  #D9D9D9;
+    --subsec-text: #E8E8E8;
+    --footer-text: #B3B3B3 ;
+    --adventurer-font: #3C2F2F;
+    --adventurer-main: #CD7F32;
+    --adventurer-sub: #E1B382;
+    --adventurer-hue: #F4E1D2;
+    --adventure-btn-main: #1D8348;
+    --adventure-btn-sub: #145A32;
+    --legendary-font: #212F3D;
+    --legendary-main: #C0C0C0;
+    --legendary-sub: #D3D3D3;
+    --legendary-hue: #F0F0F0;
+    --adventure-btn-main: #2E86C1;
+    --adventure-btn-sub: #1A5276;
+    --mythic-font: #273746;
+    --mythic-main: #DAA520;
+    --mythic-sub: #FAD7A0;
+    --mythic-hue: #FFF9E6;
+    --adventure-btn-main: #641E16;
+    --adventure-btn-sub: #512E5F;
 }
 
 
@@ -20,21 +40,44 @@ a {
     text-decoration: none;
     font-family: "Merriweather", serif;
     font-weight: bold;
+    color: var(--main-titles)
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
+#page-wrapper {
+    margin: 0 10vw 0 10vw;
+    background-color: rgba(0,0,0,0.7);
+    border: 1px solid white;
+    max-width: 1000px;
+}
+
+#container {
+    height: 21vh;
 }
 
 /*HEADER*/
 
-#nav-bar {
-    background-color: black;
+header {
+    position: fixed;
     display: flex;
     justify-content: space-between;
-    padding-right: 40px;
+    align-items: center;
+    width: 100%;
+    background-color: #000000;
+    
+}
 
-    position: sticky;
+.logo {
+    background-color: #000000;
+    width: 60vw;
 }
 
 #header-img {
-    width: 150px; 
+    display: flex;
+    width: 15vw; 
 }
 
 #nav-list {
@@ -42,22 +85,24 @@ a {
     align-items: center;
     gap: 40px;
     list-style: none;
+    padding-right: 20px;
 }
 
 /*NEWSLETTER*/
 
 #newsletter {
     text-align: center;
-    padding: 20px;
+    padding: 20px 20px 20px 20px;
     font-family: "Merriweather", serif;
-    color: lightgray;
-    
+    color: var(--main-titles);
+    text-shadow: 3px 3px 6px #000000;
 }
 
 #form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 20px;
     padding: 20px;
 }
@@ -67,37 +112,259 @@ a {
 }
 
 #submit {
-    padding: 0 10px 0 10px;
- 
+    padding: 5px 30px 5px 30px;
+    background: linear-gradient(to right, #1D8348, #145A32);
+    color: white;
+    border:none;
+    cursor: pointer;
+    text-transform: uppercase;
+    border-radius: 3px;
 }
 
-#main-div {
+#submit:hover {
+    background: linear-gradient(to left, #1D8348, #145A32);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    transform: scale(1.05);
+}
+
+/*INFO*/
+
+#features {
     display: flex;
     flex-direction: column;
-    margin: 0 25vw 0 25vw;
-    gap: 10px;
     font-family: "Roboto", sans-serif;
 }
 
 #grid {
     display: flex;
-    gap: 40px;
+    padding-bottom: 20px;
+    align-items: center;
+    margin: 0 12vw 0 12vw;
+}
+
+#grid:last-of-type {
+    display: flex;
+    padding-bottom: 0px;
 }
 
 #icon-div {
     align-self: center;
-    font-size: xx-large;
+    font-size: 30px;
+    text-align: center;
     color: orangered;
-    padding-top: 5px;
-
+    text-shadow: 2px 2px 4px black;
 }
+
 #desc-div {
     display: flex;
     flex-direction: column;
-    font-size: small;
-    gap: 5px;
+    color:  var(--main-titles);
+    margin-left: 30px;
+    text-shadow: 2px 2px 4px black;
 }
 
 #desc-div > h2 {
+    padding-bottom: 6px;
+    font-family: "Merriweather", serif;
+    text-shadow: 3px 3px 6px #000000;
+}
+
+#desc-div > p {
+    color: var(--body-text);
+}
+
+/*VIDEO*/
+
+#video {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+}
+
+/*BUNDLES*/
+
+#pricing {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    text-align: center;
+}
+
+.product {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: calc(100% / 4);
+    margin: 5px; 
+    padding-bottom: 20px;
+}
+
+.product > .level {
+    margin-bottom: 15px;
+    width: 100%;
+    padding: 15px 0 15px 0;
+    font-size: xx-large;
     font-weight: bold;
+    font-family: "Merriweather", serif;
+}
+
+.product > h2 {
+    padding: 5px 0 20px 0;
+    font-family: "Merriweather", serif;
+    font-size: 2em;
+    font-weight: bold; 
+}
+
+.product > ol {
+    padding: 0px 10px 0px 10px;
+    font-family: "Merriweather", serif;
+    font-size: xx-small;
+}
+
+.product > ol > li {
+    list-style: none;
+    padding-bottom: 15px;
+}
+
+.product > #btn {
+    margin-top: auto;
+    padding: 5px 20px 5px 20px;
+    font-family: "Roboto", sans-serif;
+    cursor: pointer;
+    border-radius: 3px;
+}
+
+#adventurer {
+    background: linear-gradient(to bottom right, #E1B382, #F4E1D2);
+    color: #3C2F2F;
+    border: 3px solid #CD7F32;
+    border-radius: 6px;
+    box-shadow: 0px 4px 8px #8B572A;
+}
+
+#adventurer .level {
+    background-color: #CD7F32;
+    color: #3C2F2F;
+    border: 3px solid #CD7F32;
+}
+
+#adventurer h2 {
+    color: #CD7F32;
+}
+
+#adventurer ol > li {
+    padding-bottom: 22px;
+}
+
+
+#adventurer ol > li:last-of-type {
+    padding-bottom: 0px;
+}
+
+#adventurer #btn {
+    background: linear-gradient(to right, #1D8348, #145A32);
+    color: #FDFEFE;
+    border: 2px double #145A32;
+    text-shadow: 1px 1px 2px black;
+}
+
+#adventurer #btn:hover {
+    background: linear-gradient(to left, #1D8348, #145A32);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    transform: scale(1.05);
+}
+
+#legendary {
+    background: linear-gradient(to bottom right, #D3D3D3, #F0F0F0);
+    color: #212F3D;
+    border: 3px solid #C0C0C0;
+    border-radius: 6px;
+    box-shadow: 0px 4px 8px #626567;
+}
+
+#legendary .level {
+    background-color: #C0C0C0;
+    color: #212F3D;
+    border: 3px solid #C0C0C0;
+}
+
+#legendary h2 {
+    color: #C0C0C0;
+}
+
+#legendary #btn {
+    background: linear-gradient(to right, #2E86C1, #1A5276);
+    color: #FFFFFF;
+    border: 2px double #1A5276;
+    text-shadow: 1px 1px 2px black;
+}
+
+#legendary #btn:hover {
+    background: linear-gradient(to left, #2E86C1, #1A5276);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    transform: scale(1.05);
+}
+
+#mythic {
+    background: linear-gradient(to bottom right, #FAD7A0, #FFF9E6);
+    color: #273746;
+    border: 3px solid #DAA520;
+    border-radius: 6px;
+    box-shadow: 0px 4px 8px #B7950B;
+}
+
+#mythic .level {
+    background-color: #DAA520;
+    color: #273746;
+    border: 3px solid #DAA520;
+}
+
+#mythic h2 {
+    color: #DAA520;
+}
+
+#mythic #btn {
+    background: linear-gradient(to right, #641E16, #512E5F);
+    color: #FFFFFF;
+    border: 2px double #512E5F;
+    text-shadow: 1px 1px 2px black;
+}
+
+#mythic #btn:hover {
+    background: linear-gradient(to left, #641E16, #512E5F);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    transform: scale(1.05);
+} 
+
+.product > h2:hover {
+    transform: scale(1.1); 
+    transition: transform 0.3s ease-in-out; 
+    text-shadow: 2px 2px 4px black;
+}
+
+/*FOOTER*/
+
+footer {
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
+    color: white;
+    padding: 20px 0 20px 0;
+}
+
+footer > ul {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 20px;
+    gap: 10px;
+    list-style: none;
+    padding-bottom: 6px;
+}
+
+footer > span {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 20px;
 }
